rust/crates/spek/src/notation/snapshots/spek__notation__note__tests__test_note_from_strsharp_octave_cents.snap
---
source: crates/spek/src/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C#4+25
Note { pitch: C, accs: [Sharp], octave: Some(4), cents: Some(25) }
display:c♯4+25
